--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@alilc/lowcode-engine": "^1.0.0",
+    "@alilc/lowcode-engine-ext": "^1.0.0",
     "@alilc/lowcode-types": "^1.0.0",
     "@alib/build-scripts": "^0.1.18",
     "@types/events": "^3.0.0",
