--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@alilc/lowcode-setter-title": "^1.0.2"
   },
   "devDependencies": {
+    "@alib/build-scripts": "^0.1.18",
     "@alilc/lowcode-engine": "^1.0.0",
     "@alilc/lowcode-engine-ext": "^1.0.0",
     "@alilc/lowcode-types": "^1.0.0",
-    "@alib/build-scripts": "^0.1.18",
     "@types/events": "^3.0.0",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
@@ -42,6 +42,7 @@
     "build-plugin-fusion": "^0.1.0",
     "build-plugin-moment-locales": "^0.1.0",
     "build-plugin-react-app": "^1.1.2",
+    "fs-extra": "^10.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0"
   }
 }
