--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alilc/lowcode-demo",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "description": "Low-Code Engine 低代码搭建引擎 Demo 项目",
   "repository": "git@github.com:alibaba/lowcode-demo.git",
   "license": "MIT",
@@ -28,7 +28,8 @@
     "@alilc/lowcode-plugin-zh-en": "^1.0.0",
     "@alilc/lowcode-react-renderer": "^1.0.0",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
-    "@alilc/lowcode-setter-title": "^1.0.2"
+    "@alilc/lowcode-setter-title": "^1.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@alib/build-scripts": "^0.1.18",
@@ -39,6 +40,7 @@
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
     "@types/streamsaver": "^2.0.0",
+    "@types/uuid": "^8.3.4",
     "build-plugin-fusion": "^0.1.0",
     "build-plugin-moment-locales": "^0.1.0",
     "build-plugin-react-app": "^1.1.2",
