--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "config": {},
   "dependencies": {
+    "@alilc/lowcode-datasource-fetch-handler": "^1.0.1",
     "@alilc/lowcode-plugin-code-editor": "^1.0.2",
     "@alilc/lowcode-plugin-code-generator": "^1.0.4",
     "@alilc/lowcode-plugin-components-pane": "^1.0.2",
