--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "@alilc/lowcode-react-renderer": "^1.0.0",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
     "@alilc/lowcode-setter-title": "^1.0.2",
+    "@formily/core": "^2.1.4",
+    "@formily/react": "^2.1.4",
+    "@seada/antd-plugins": "^0.0.1-alpha.8",
+    "antd": "^4.21.0",
+    "moment": "^2.29.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
