--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@alilc/lowcode-react-renderer": "^1.0.0",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
     "@alilc/lowcode-setter-title": "^1.0.2",
+    "@alilc/lowcode-utils": "^1.0.11",
     "@formily/antd": "^2.1.9",
     "@formily/core": "^2.1.9",
     "@formily/react": "^2.1.9",
     "@seada/antd-plugins": "0.0.1-rc.3",
     "antd": "^4.21.4",
     "moment": "^2.29.3",
+    "regenerator-runtime": "^0.13.9",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
