--- a/demo-custom-initialization/package.json
+++ b/demo-custom-initialization/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@alilc/lowcode-demo-custom-initialization",
   "version": "1.0.28",
-  "description": "Low-Code Engine 低代码搭建引擎 Demo 项目 - 自定义初始化引擎",
+  "description": "Low-Code Engine 低代码搭建引擎 Demo 项目 - 自定义初始化",
   "repository": "git@github.com:alibaba/lowcode-demo.git",
   "license": "MIT",
   "main": "index.js",
