--- a/demo-basic-fusion/package.json
+++ b/demo-basic-fusion/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@alilc/lowcode-demo-general",
+  "name": "@alilc/lowcode-demo-basic-fusion",
   "version": "1.0.28",
-  "description": "Low-Code Engine 低代码搭建引擎 Demo 项目 - 综合场景",
+  "description": "Low-Code Engine 低代码搭建引擎 Demo 项目 - 基础Fusion组件",
   "repository": "git@github.com:alibaba/lowcode-demo.git",
   "license": "MIT",
   "main": "index.js",
