chore: demo version 1.0.35

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "build-scripts build",
     "prepublishOnly": "npm run build",
     "pub": "node ./scripts/watchdog.js && npm pub",
-    "sync": "tnpm sync alilc/lowcode-demo"
+    "sync": "tnpm sync @alilc/lowcode-demo"
   },
   "files": [
     "build"
