--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@formily/antd": "^2.1.9",
     "@formily/core": "^2.1.9",
     "@formily/react": "^2.1.9",
-    "@seada/antd-plugins": "0.0.1-rc.3",
+    "@seada/antd-plugins": "^1.0.0-rc.23",
+    "@seada/lowcode-code-generator": "^1.0.4",
     "antd": "^4.21.4",
     "moment": "^2.29.3",
     "uuid": "^8.3.2"
