--- a/demo-lowcode-component/package.json
+++ b/demo-lowcode-component/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@alilc/lowcode-demo",
-  "version": "1.1.2",
-  "description": "Low-Code Engine 低代码搭建引擎 Demo 项目",
+  "name": "@alilc/lowcode-demo-lowcode-component",
+  "version": "1.0.28",
+  "description": "Low-Code Engine 低代码搭建引擎 Demo 项目 - 低代码组件",
   "repository": "git@github.com:alibaba/lowcode-demo.git",
   "license": "MIT",
   "main": "index.js",
@@ -9,9 +9,7 @@
     "start": "build-scripts start --disable-reload --port 5556",
     "build": "build-scripts build",
     "prepublishOnly": "npm run build",
-    "pub": "node ./scripts/watchdog.js && npm pub",
-    "sync": "tnpm sync @alilc/lowcode-demo",
-    "syncOss": "node ./scripts/sync-oss.js"
+    "pub": "node ./scripts/watchdog.js && npm pub"
   },
   "files": [
     "build"
@@ -26,18 +24,16 @@
     "@alilc/lowcode-plugin-inject": "^1.0.0",
     "@alilc/lowcode-plugin-manual": "^1.0.4",
     "@alilc/lowcode-plugin-schema": "^1.0.2",
-    "@alilc/lowcode-plugin-set-ref-prop": "^1.0.1",
     "@alilc/lowcode-plugin-simulator-select": "^1.0.2",
     "@alilc/lowcode-plugin-undo-redo": "^1.0.0",
     "@alilc/lowcode-plugin-zh-en": "^1.0.0",
+    "@alilc/lowcode-plugin-set-ref-prop": "^1.0.1",
     "@alilc/lowcode-react-renderer": "^1.0.0",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
     "@alilc/lowcode-setter-title": "^1.0.2",
     "@formily/antd": "^2.1.9",
     "@formily/core": "^2.1.9",
     "@formily/react": "^2.1.9",
-    "@seada/antd-plugins": "^1.0.0-rc.23",
-    "@seada/lowcode-code-generator": "^1.0.4",
     "antd": "^4.21.4",
     "moment": "^2.29.3",
     "uuid": "^8.3.2"
