--- a/demo-antd-pro-with-formily/package.json
+++ b/demo-antd-pro-with-formily/package.json
@@ -31,9 +31,9 @@
     "@alilc/lowcode-react-renderer": "^1.0.0",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
     "@alilc/lowcode-setter-title": "^1.0.2",
-    "@formily/antd": "^2.1.9",
-    "@formily/core": "^2.1.9",
-    "@formily/react": "^2.1.9",
+    "@formily/antd": "2.2.15",
+    "@formily/core": "2.2.15",
+    "@formily/react": "2.2.15",
     "@seada/antd-plugins": "^1.0.0-rc.23",
     "@seada/lowcode-code-generator": "^1.0.4",
     "antd": "^4.21.4",
@@ -55,5 +55,11 @@
     "build-plugin-react-app": "^1.1.2",
     "fs-extra": "^10.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0"
+  },
+  "resolutions": {
+    "@formily/antd": "2.2.15",
+    "@formily/core": "2.2.15",
+    "@formily/react": "2.2.15",
+    "@formily/next": "2.2.15"
   }
 }
