--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@alilc/lowcode-react-renderer": "^1.0.0",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
     "@alilc/lowcode-setter-title": "^1.0.2",
-    "@formily/antd": "^2.1.9",
-    "@formily/core": "^2.1.9",
-    "@formily/react": "^2.1.9",
+    "@formily/antd": "2.2.15",
+    "@formily/core": "2.2.15",
+    "@formily/react": "2.2.15",
     "@seada/antd-plugins": "^1.0.0-rc.27",
     "antd": "^4.21.4",
     "moment": "^2.29.3",
