--- a/demo-antd-pro-with-formily/package.json
+++ b/demo-antd-pro-with-formily/package.json
@@ -60,6 +60,7 @@
     "@formily/antd": "2.2.15",
     "@formily/core": "2.2.15",
     "@formily/react": "2.2.15",
-    "@formily/next": "2.2.15"
+    "@formily/next": "2.2.15",
+    "@babel/core": "7.20.12"
   }
 }
