--- a/demo-basic-antd/package.json
+++ b/demo-basic-antd/package.json
@@ -50,5 +50,8 @@
     "build-plugin-react-app": "^1.1.2",
     "fs-extra": "^10.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0"
+  },
+  "resolutions": {
+    "@babel/core": "7.20.12"
   }
 }
