--- a/demo-graph-x6/package.json
+++ b/demo-graph-x6/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@alilc/lowcode-demo-node-extended-actions",
+  "name": "@alilc/lowcode-demo-graph-x6",
   "version": "1.0.28",
-  "description": "Low-Code Engine 低代码搭建引擎 Demo 项目 - 扩展节点操作项",
+  "description": "Low-Code Engine 低代码搭建引擎 Demo 项目 - X6 画布",
   "repository": "git@github.com:alibaba/lowcode-demo.git",
   "license": "MIT",
   "main": "index.js",
