--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alilc/lowcode-demo",
-  "version": "1.1.72",
+  "version": "1.1.73-beta.3",
   "description": "Low-Code Engine 低代码搭建引擎 Demo 项目",
   "repository": "git@github.com:alibaba/lowcode-demo.git",
   "license": "MIT",
@@ -8,7 +8,6 @@
   "scripts": {
     "start": "build-scripts start --disable-reload --port 5556",
     "build": "build-scripts build",
-    "prepublishOnly": "npm run build",
     "pub": "node ./scripts/watchdog.js && npm pub",
     "sync": "tnpm sync @alilc/lowcode-demo",
     "syncOss": "node ./scripts/sync-oss.js"
@@ -16,19 +15,30 @@
   "files": [
     "build"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
   "config": {},
   "dependencies": {
+    "@alilc/lce-graph-core": "^1.0.6",
+    "@alilc/lce-graph-materials-pane": "^1.0.10",
+    "@alilc/lce-graph-tools": "^1.0.6",
+    "@alilc/lce-graph-x6-designer": "^1.0.6",
+    "@alilc/lce-graph-x6-stencil": "^1.0.6",
     "@alilc/lowcode-datasource-fetch-handler": "^1.0.1",
     "@alilc/lowcode-plugin-code-editor": "^1.0.3",
-    "@alilc/lowcode-plugin-code-generator": "^1.0.4",
+    "@alilc/lowcode-plugin-code-generator": "^1.0.7-beta.0",
     "@alilc/lowcode-plugin-components-pane": "^2.0.2",
     "@alilc/lowcode-plugin-datasource-pane": "^1.0.9",
-    "@alilc/lowcode-plugin-inject": "^1.2.1",
+    "@alilc/lowcode-plugin-inject": "^1.2.3-beta.0",
     "@alilc/lowcode-plugin-manual": "^1.0.4",
+    "@alilc/lowcode-plugin-resource-tabs": "^1.0.0-beta.3",
     "@alilc/lowcode-plugin-schema": "^1.0.2",
     "@alilc/lowcode-plugin-set-ref-prop": "^1.0.1",
-    "@alilc/lowcode-plugin-simulator-select": "^1.0.2",
+    "@alilc/lowcode-plugin-simulator-select": "^1.0.4-beta.0",
     "@alilc/lowcode-plugin-undo-redo": "^1.0.0",
+    "@alilc/lowcode-plugin-view-manager-pane": "^1.0.0-beta.3",
     "@alilc/lowcode-plugin-zh-en": "^1.0.0",
     "@alilc/lowcode-react-renderer": "^1.1.2",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
@@ -37,11 +47,6 @@
     "@formily/core": "2.2.15",
     "@formily/react": "2.2.15",
     "@seada/antd-plugins": "^1.0.0-rc.27",
-    "@alilc/lce-graph-core": "^1.0.6",
-    "@alilc/lce-graph-tools": "^1.0.6",
-    "@alilc/lce-graph-x6-designer": "^1.0.6",
-    "@alilc/lce-graph-x6-stencil": "^1.0.6",
-    "@alilc/lce-graph-materials-pane": "^1.0.10",
     "antd": "^4.21.4",
     "moment": "^2.29.3",
     "uuid": "^8.3.2"
