--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "@alilc/lce-graph-x6-stencil": "^1.0.6",
     "@alilc/lowcode-datasource-fetch-handler": "^1.0.1",
     "@alilc/lowcode-plugin-code-editor": "^1.0.3",
-    "@alilc/lowcode-plugin-code-generator": "^1.0.7-beta.0",
+    "@alilc/lowcode-plugin-code-generator": "^1.0.6",
     "@alilc/lowcode-plugin-components-pane": "^2.0.2",
     "@alilc/lowcode-plugin-datasource-pane": "^1.0.9",
-    "@alilc/lowcode-plugin-inject": "^1.2.3-beta.0",
+    "@alilc/lowcode-plugin-inject": "^1.2.3",
     "@alilc/lowcode-plugin-manual": "^1.0.4",
-    "@alilc/lowcode-plugin-resource-tabs": "^1.0.0-beta.3",
+    "@alilc/lowcode-plugin-resource-tabs": "^1.0.0",
     "@alilc/lowcode-plugin-schema": "^1.0.2",
     "@alilc/lowcode-plugin-set-ref-prop": "^1.0.1",
-    "@alilc/lowcode-plugin-simulator-select": "^1.0.4-beta.0",
+    "@alilc/lowcode-plugin-simulator-select": "^1.0.4",
     "@alilc/lowcode-plugin-undo-redo": "^1.0.0",
-    "@alilc/lowcode-plugin-view-manager-pane": "^1.0.0-beta.3",
+    "@alilc/lowcode-plugin-view-manager-pane": "^1.0.0",
     "@alilc/lowcode-plugin-zh-en": "^1.0.0",
     "@alilc/lowcode-react-renderer": "^1.1.2",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
