--- a/demo-general/package.json
+++ b/demo-general/package.json
@@ -19,15 +19,15 @@
     "@alilc/lowcode-datasource-fetch-handler": "^1.0.1",
     "@alilc/lowcode-plugin-code-editor": "^1.0.3",
     "@alilc/lowcode-plugin-code-generator": "^1.0.4",
-    "@alilc/lowcode-plugin-components-pane": "^2.0.0",
+    "@alilc/lowcode-plugin-components-pane": "latest",
     "@alilc/lowcode-plugin-datasource-pane": "^1.0.9",
     "@alilc/lowcode-plugin-inject": "^1.2.1",
     "@alilc/lowcode-plugin-manual": "^1.0.4",
     "@alilc/lowcode-plugin-schema": "^1.0.2",
+    "@alilc/lowcode-plugin-set-ref-prop": "^1.0.1",
     "@alilc/lowcode-plugin-simulator-select": "^1.0.2",
     "@alilc/lowcode-plugin-undo-redo": "^1.0.0",
     "@alilc/lowcode-plugin-zh-en": "^1.0.0",
-    "@alilc/lowcode-plugin-set-ref-prop": "^1.0.1",
     "@alilc/lowcode-react-renderer": "^1.1.2",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
     "@alilc/lowcode-setter-title": "^1.0.2",
