--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "config": {},
   "dependencies": {
+    "@alilc/build-plugin-lce": "^0.0.4-beta.3",
     "@alilc/lce-graph-core": "^1.0.6",
     "@alilc/lce-graph-materials-pane": "^1.0.10",
     "@alilc/lce-graph-tools": "^1.0.6",
