--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@alilc/lowcode-plugin-set-ref-prop": "^1.0.1",
     "@alilc/lowcode-plugin-simulator-select": "^1.0.4",
     "@alilc/lowcode-plugin-undo-redo": "^1.0.0",
-    "@alilc/lowcode-plugin-view-manager-pane": "^1.0.0",
+    "@alilc/lowcode-plugin-view-manager-pane": "^1.0.4-beta.7",
     "@alilc/lowcode-plugin-zh-en": "^1.0.0",
     "@alilc/lowcode-react-renderer": "^1.1.2",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
