--- a/demo-workspace/package.json
+++ b/demo-workspace/package.json
@@ -32,7 +32,7 @@
     "@alilc/lowcode-react-renderer": "^1.1.2",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
     "@alilc/lowcode-setter-title": "^1.0.2",
-    "@alilc/lowcode-types": "latest",
+    "@alilc/lowcode-types": "^1.3.0",
     "antd": "^4.21.4",
     "moment": "^2.29.3",
     "uuid": "^8.3.2"
